add unit test to listContactCard Component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,11 @@
 {
+  "compilerOptions": {
+    "target": "es6",
+    "module": "esnext",
+    "jsx": "react",
+    "esModuleInterop": true,
+    "strict": true,
+    "outDir": "dist"
+  },
   "extends": "@tsconfig/react-native/tsconfig.json"
 }
